<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.acuver</groupId>
        <artifactId>autwit-root</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <groupId>com.acuver</groupId>
    <artifactId>autwit-core</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <!-- ==========================================================
         CENTRALIZED VERSION CATALOG
         ========================================================== -->
    <properties>
        <java.version>21</java.version>

        <!-- Spring Boot BOM -->
        <spring.boot.version>3.5.7</spring.boot.version>

        <!-- Core libs -->
        <jackson.version>2.17.2</jackson.version>
<!-- REMOVE THIS LINE - let Spring Boot manage Log4j2 version -->
<!--        <log4j.version>2.20.0</log4j.version>-->
        <lombok.version>1.18.36</lombok.version>

        <!-- Test libs -->
        <testng.version>7.9.0</testng.version>
        <cucumber.version>7.11.0</cucumber.version>
        <allure.version>2.29.1</allure.version>

        <!-- Infrastructure -->
<!--        <postgresql.version>42.6.0</postgresql.version>-->
        <mongo.driver.version>4.11.0</mongo.driver.version>
        <kafka.clients.version>3.9.1</kafka.clients.version>

        <commons.lang3.version>3.18.0</commons.lang3.version>
        <json.version>20250517</json.version>

        <!-- Maven plugins -->
        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
        <maven.jar.plugin.version>3.4.0</maven.jar.plugin.version>
        <maven.enforcer.plugin.version>3.3.0</maven.enforcer.plugin.version>
    </properties>

    <!-- ==========================================================
         MODULE DECLARATIONS
         ========================================================== -->
    <modules>
        <module>autwit-shared</module>
        <module>autwit-domain</module>
        <module>autwit-engine</module>
        <module>autwit-adapter-mongo</module>
        <module>autwit-adapter-postgres</module>
        <module>autwit-adapter-h2</module>
        <module>autwit-adapter-kafka</module>
        <module>autwit-internal-testkit</module>
<!--        <module>autwit-runner</module>-->
    </modules>

    <!-- ==========================================================
         SPRING BOOT BOM IMPORT
         ========================================================== -->
    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-logging</artifactId>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.logging.log4j</groupId>
                        <artifactId>log4j-to-slf4j</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>


            <dependency>
                <groupId>com.vaadin.external.google</groupId>
                <artifactId>android-json</artifactId>
                <version>0.0.20131108.vaadin1</version>
                <scope>provided</scope>
                <exclusions>
                    <exclusion>
                        <groupId>org.json</groupId>
                        <artifactId>json</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
        </dependencies>
    </dependencyManagement>
<distributionManagement>



    <repository><id>autwit-parent</id>
        <url>http://localhost:8085/repository/maven-releases/</url>
    </repository>
    <snapshotRepository>
        <id>autwit-snapshots</id>
        <url>http://localhost:8085/repository/maven-snapshots/</url>
    </snapshotRepository>
</distributionManagement>
    <!-- ==========================================================
         PLUGIN MANAGEMENT (Shared by all modules)
         ========================================================== -->
    <build>
        <pluginManagement>
            <plugins>

                <!-- Spring Boot Repackager -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot.version}</version>
                </plugin>

                <!-- Java 21 Compiler -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                        <encoding>UTF-8</encoding>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <!-- TestNG/Cucumber test runner -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                </plugin>

                <!-- JAR Packaging -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.plugin.version}</version>
                </plugin>

                <!-- Java Version Enforcement -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>${maven.enforcer.plugin.version}</version>
                    <configuration>
                        <rules>
                            <requireJavaVersion>
                                <version>${java.version}</version>
                            </requireJavaVersion>
                        </rules>
                    </configuration>
                </plugin>

                <!-- FORMATTER -->
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>2.46.1</version>
                    <configuration>
                        <java>
                            <googleJavaFormat/>
                        </java>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
    </repositories>

</project>
